A new Mozarabic culture, several new traditions, one new MAA.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -31,6 +31,9 @@
  name_list_umbrian:0 "$umbrian$"
  name_list_venetian:0 "$venetian$"
  name_list_chechen:0 "$chechen$"
+ mozarabic:0 "Musta‘rab"
+ mozarabic_prefix:0 "Mozarabo-"
+ mozarabic_collective_noun:0 "Musta‘rab"
  romagnol:0 "Rumagnòl"
  romagnol_prefix:0 "Rumagnòl"
  romagnol_collective_noun:0 "Rumagnòl"
