--- a/localization/english/culture/traditions/eastern_traditions_l_english.yml
+++ b/localization/english/culture/traditions/eastern_traditions_l_english.yml
@@ -8,4 +8,51 @@
  culture_parameter_healthier_children_active:0 "$doctrine_parameter_healthier_children_active$"
  tradition_circassian_beauty_name:0 "Circassian Beauty"
  tradition_circassian_beauty_desc:1 "There are folks songs in various languages all around the Middle East and Balkans describing the unusual beauty of Circassian women."
+ culture_parameter_reduced_opinion_penalty_from_cuckolding:0 "Reduced opinion penalty from cuckolding"
+ culture_parameter_can_kill_own_children:0 "Can kill own children"
  culture_parameter_beauty_trait_more_common:0 "The [GetTrait('beauty_good_1').GetName( GetNullCharacter )] [trait|E] is more common"
+ culture_parameter_orchard_extra_advantages:0 "Orchards are far more effective, and can be built on Jungle and Forest terrains too."
+ culture_parameter_terrace_farming:0 "Hill Farms are more effective, and can be built on Mountainous terrains too."
+ culture_parameter_peasant_and_populist_factions_more_common:0 "Different-[culture|E] [peasant_factions|E] and [popular_factions|E] are more common"
+ culture_parameter_minus_language_cap:0 "Can learn #N 1#! less [language|E] without any penalties"
+ culture_parameter_easier_conversion_of_other_cultures:0 "Easier to convert other cultures, while being harder to convert"
+ culture_in_steppe_terrain_10_desc:0 "At least #V 10%#! of the [counties|E] of this [culture|E] must be in Steppe [terrain|E] or the [GetGeographicalRegion('world_steppe').GetName] [region|E]"
+ culture_parameter_bad_congenital_traits_shunned:0 "Negative congenital traits are Shunned"
+ culture_parameter_good_congenital_traits_exalted:0 "Positive congenital traits are Exalted"
+ culture_parameter_allows_unrestricted_marriage:0 "Allows unrestricted marriage"
+ russian_or_polish_desc:0 "The [culture|E] does not have the Russian or Polish [heritage|E]"
+ russian_mongolic_chinese_japanese_korean_desc:0 "The [culture|E] does not have the East Slavic, Mongolic, Chinese, Japanese or Korean [heritage|E]"
+ tradition_cultural_supremacism_name:0 "Cultural Supremacism"
+ russian_iranian_chinese_japanese_desc:0 "The [culture|E] does not have the East Slavic, Iranian, Chinese or Japanese [heritage|E]"
+ tradition_cultural_supremacism_name:0 "Cultural Supremacism"
+ tradition_cultural_supremacism_desc:1 "This culture openly and publicly claims superiority over all other cultures and views the assimilation of 'inferior' peoples into this culture as a necessary part of a mission to civilize the barbarians. There is nothing to be learned from or about foreign barbarians - their inferior cultures must be replaced by our superior one."
+ tradition_tamers_of_the_steppe_name:0 "Tamers of the Steppe"
+ tradition_tamers_of_the_steppe_desc:1 "This culture does not originate from the steppes, but it has spread its seeds there, trying to tame the wast wilderness of the steppes."
+ tradition_alabama_name:0 "Sweet Home"
+ tradition_alabama_desc:1 "This culture believes in keeping it in the family, in the warmth of the sweet home."
+ tradition_sexual_revolution_name:0 "The Summer of Love"
+ tradition_sexual_revolution_desc:1 "This culture does not put any emphasis on sexual purity or chastity, instead promoting the unshackling of lust, so-called 'free love', orgies, and overall sexual promiscuity and hedonism."
+ tradition_shadow_court_name:0 "Shadow Courts"
+ tradition_shadow_court_desc:1 "This culture puts a heavy emphasis on secrecy and privacy, as well as personal ambition at the expense of familial connections."
+ tradition_tyrants_name:0 "Appeal to Authority"
+ tradition_tyrants_desc:1 "This culture puts a heavy emphasis on near-unconditional loyalty to one's senior overlord, even if said overlord is being overly tyrannical."
+ tradition_shadow_court_name:0 "Shadow Courts"
+ tradition_shadow_court_desc:1 "This culture puts a heavy emphasis on secrecy and privacy, as well as personal ambition at the expense of familial connections."
+ tradition_bad_architecture_name:0 "Building on Sand"
+ tradition_bad_architecture_desc:1 "This culture isn't known for laying their structures on particularly strong foundations."
+ tradition_good_hygiene_name:0 "Cleanliness First"
+ tradition_good_hygiene_desc:1 "This culture puts a high amount of emphasis on hygiene and cleanliness, frowning upon unwashedness even more so than other cultures."
+ tradition_eugenics_name:0 "Eugenicists"
+ tradition_eugenics_desc:1 "This culture is known for putting a high amount of emphasis on fitness-for-life, determining it at birth, castrating those deemed unfit. This selection has its ups and downs, but overall results in longer-lived, healthier people surviving and passing on their genes."
+ tradition_arcane_fascination_name:0 "Arcane Fascination"
+ tradition_arcane_fascination_desc:1 "This culture is known for being particularly fascinated by the arcane and supernatural phenomenon, religion be damned."
+ tradition_veche_name:0 "Věče"
+ tradition_veche_desc:1 "The Věče was a tribal council - and later popular assembly - in medieval Slavic countries, eerily similar to Athenian democracy and the Scandinavian 'thing', predating the Kievan Rus'. Chieftains and kings were elected, rather than inherited. While a somewhat crude system compared to Mediterranean Republican traditions, it was still a step up from electing leaders with rocks and sticks."
+ tradition_agroforestery_name:0 "Agroforestry"
+ tradition_agroforestery_desc:0 "Agroforestry is a land use management system in which trees or shrubs are grown around or among crops or pastureland. Trees produce a wide range of useful and marketable products from fruits/nuts, medicines, wood products, etc. This intentional combination of agriculture and forestry has multiple benefits, such as greatly enhanced yields from staple food crops, enhanced farmer livelihoods from income generation, increased biodiversity, improved soil structure and health, reduced erosion, and carbon sequestration."
+ tradition_terrace_farming_name:0 "Terrace Farming"
+ tradition_terrace_farming_desc:0 "In agriculture, a terrace is a piece of sloped plane that has been cut into a series of successively receding flat surfaces or platforms, which resemble steps, for the purposes of more effective farming. This type of landscaping is therefore called terracing. Graduated terrace steps are commonly used to farm on hilly or mountainous terrain. Terraced fields decrease both erosion and surface runoff, and may be used to support growing crops that require irrigation, such as rice."
+ TRADITION_EASIER_TO_CULTURE_CONVERT_WITH_TRADITION_MODIFIER:1 "Liege [cultural|E] [tradition|E] bonus"
+ TRADITION_HARDER_TO_CULTURE_CONVERT_WITHOUT_TRADITION_MODIFIER:1 "Liege [cultural|E] [tradition|E] penalty"
+ CULTURE_CONVERSION_SUPREMACY_COUNTY_MODIFIER:0 "[county.GetCulture.GetName] — [GetCultureTradition('tradition_cultural_supremacism').GetBaseName]"
+ CULTURE_CONVERSION_SUPREMACY_LIEGE_MODIFIER:0 "[liege.GetCulture.GetName] — [GetCultureTradition('tradition_cultural_supremacism').GetBaseName]"
