--- a/localization/english/religion/religion_ainu_l_english.yml
+++ b/localization/english/religion/religion_ainu_l_english.yml
@@ -25,14 +25,14 @@
  ainu_religious_symbol:0 "temple"
  
  ainuism:0 "Kamuy Nomi"
- ainuism_adj:0 "Aynu"
- ainuism_adherent:0 "Aynu"
- ainuism_adherent_plural:0 "Aynus" 
+ ainuism_adj:0 "Kamuy Nomi"
+ ainuism_adherent:0 "Kamuy Nomi"
+ ainuism_adherent_plural:0 "Kamuy Nomi" 
  
- ainuism_old:0 "Old Kamuy Nomi"
- ainuism_old_adj:0 "Old Aynu"
- ainuism_old_adherent:0 "Old Aynu"
- ainuism_old_adherent_plural:0 "Old Aynus"
+ ainuism_old:0 "Okamuy Nomi"
+ ainuism_old_adj:0 "Okamuy Nomi"
+ ainuism_old_adherent:0 "Okamuy Nomi"
+ ainuism_old_adherent_plural:0 "Okamuy Nomi"
  
  ainuism_desc:0 "The Ainu are traditionally animists, believing that everything in nature has a kamuy (spirit or god) on the inside. The most important include Kamuy-huci, goddess of the hearth, Kim-un-kamuy, god of bears and mountains, and Repun Kamuy, god of the sea, fishing, and marine animals. Kotan-kar-kamuy is regarded as the creator of the world in the Ainu religion."
  ainuism_old_desc:0 "The Ainu are traditionally animists, believing that everything in nature has a kamuy (spirit or god) on the inside. The most important include Kamuy-huci, goddess of the hearth, Kim-un-kamuy, god of bears and mountains, and Repun Kamuy, god of the sea, fishing, and marine animals. Kotan-kar-kamuy is regarded as the creator of the world in the Ainu religion."
