--- a/localization/english/religion/religion_dead_l_english.yml
+++ b/localization/english/religion/religion_dead_l_english.yml
@@ -16,46 +16,41 @@
  natib_quadish:0 "Natib Qadish"
  natib_quadish_desc:0 "Natib Qadish is a modern polytheistic religion that venerates the ancient deities of Canaan and strives to understand the ancient cultural context and religious practices in which these deities were honored. Within Natib Qadish, there are various views, beliefs, approaches, and practices because much of the research is incomplete and scholarly theories differ widely."
  mithraism:0 "Mysterium Mithrae"
- mithraism_adj:0 "Mithraic"
- mithraism_adherent:0 "Mithraist"
- mithraism_adherent_plural:0 "Mithraists"
+ mithraism_adj:0 "Mithraecus"
+ mithraism_adherent:0 "Mithraecus"
+ mithraism_adherent_plural:0 "Mithraeci"
  old_mithraism:0 "Mysterium Mithrae Archaica"
- old_mithraism_adj:0 "Old Mithraic"
- old_adherent:0 "Old Mithraist"
- old_adherent_plural:0 "Old Mithraists"
+ old_mithraism_adj:0 "Mithraecus Archaicus"
+ old_adherent:0 "Mithraecus Archaicus"
+ old_adherent_plural:0 "Mithraeci Archaici"
  mithraism_desc:0 "The Mithraic Mysteries were a mystery religion practiced in the Roman Empire from about the 1st to 4th centuries AD. The name of the Persian god Mithra (proto-Indo-Iranian Mitra), adapted into Greek as Mithras, was linked to a new and distinctive imagery. Writers of the Roman Empire period referred to this mystery religion by phrases which can be anglicized as Mysteries of Mithras or Mysteries of the Persians; modern historians refer to it as Mithraism, or sometimes Roman Mithraism. The mysteries were popular in the Roman military. Worshippers of Mithras had a complex system of seven grades of initiation, with ritual meals. Initiates called themselves syndexioi, those 'united by the handshake'. They met in underground temples (called mithraea), which survive in large numbers. It has been estimated that there would have been at least 680–690 mithraea in Rome."
- basque_religion:0 "Basque"
- basque_religion_adj:0 "Basque"
- basque_religion_adherent:0 "Basque Pagan"
- basque_religion_adherent_plural:0 "Basque Pagans"
- basque_religion_desc:0 "The mythology of the ancient Basques largely did not survive the arrival of Christianity in the Basque Country between the 4th and 12th century AD. Most of what is known about elements of this original belief system is based on the analysis of legends, the study of place names and scant historical references to pagan rituals practised by the Basques. One main figure of this belief system was the female character of Mari. According to legends collected in the area of Ataun, the other main figure was her consort Sugaar. However, due to the scarcity of the material it is difficult to say if this would have been the central pair of the Basque pantheon. Based on the attributes ascribed to these mythological creatures, this would be considered a chthonic religion as all its characters dwell on earth or below it, with the sky seen mostly as an empty corridor through which the divinities pass."
  jainko:0 "Jainko"
  jainko_adj:0 "Jainko"
- jainko_adherent:0 "Jainkoist"
- jainko_adherent_plural:0 "Jainkoists"
+ jainko_adherent:0 "Jainko"
+ jainko_adherent_plural:0 "Jainko"
  old_jainko:0 "Agur Jainko"
- old_jainko_adj:0 "Old Jainko"
- old_jainko_adherent:0 "Old Jainkoist"
- old_jainko_adherent_plural:0 "Old Jainkoists"
+ old_jainko_adj:0 "Agur Jainko"
+ old_jainko_adherent:0 "Agur Jainko"
+ old_jainko_adherent_plural:0 "Agur Jainko"
  jainko_desc:0 "The mythology of the ancient Basques largely did not survive the arrival of Christianity in the Basque Country between the 4th and 12th century AD. Most of what is known about elements of this original belief system is based on the analysis of legends, the study of place names and scant historical references to pagan rituals practised by the Basques. One main figure of this belief system was the female character of Mari. According to legends collected in the area of Ataun, the other main figure was her consort Sugaar. However, due to the scarcity of the material it is difficult to say if this would have been the central pair of the Basque pantheon. Based on the attributes ascribed to these mythological creatures, this would be considered a chthonic religion as all its characters dwell on earth or below it, with the sky seen mostly as an empty corridor through which the divinities pass."
  egyptian_pagan:0 "Maataw Necher"
- egyptian_pagan_adj:0 "Egyptian"
- egyptian_pagan_adherent:0 "Egyptian"
- egyptian_pagan_adherent_plural:0 "Egyptians"
+ egyptian_pagan_adj:0 "Maataw Necher"
+ egyptian_pagan_adherent:0 "Maataw Necher"
+ egyptian_pagan_adherent_plural:0 "Maataw Necher"
  old_egyptian_pagan:0 "Yaw Maataw Necher"
- old_egyptian_pagan_adj:0 "Old Egyptian"
- old_egyptian_pagan_adherent:0 "Old Egyptian"
- old_egyptian_pagan_adherent_plural:0 "Old Egyptians"
+ old_egyptian_pagan_adj:0 "Yaw Maataw Necher"
+ old_egyptian_pagan_adherent:0 "Yaw Maataw Necher"
+ old_egyptian_pagan_adherent_plural:0 "Yaw Maataw Necher"
  egyptian_pagan_desc:0 "The Egyptian religion represents the polytheistic religion of the ancient Egyptians. It's centered on the many deities who control the forces and elements of nature. The practices of Egyptian religion were efforts to provide for the gods and gain their favor."
  atenism:0 "Maataw Yátin"
- atenism_adj:0 "Atenist"
- atenism_adherent:0 "Atenist"
- atenism_adherent_plural:0 "Atenists"
+ atenism_adj:0 "Maataw Yátin"
+ atenism_adherent:0 "Maataw Yátin"
+ atenism_adherent_plural:0 "Maataw Yátin"
  atenism_desc:0 "Atenism refers to a religion and the religious changes associated with the ancient Egyptian Eighteenth Dynasty pharaoh Akhenaten. The religion centered on the cult of the god Aten, the disc of the Sun and originally an aspect of the traditional solar deity Ra. In the 14th century BC, Atenism was Egypt's state religion for about 20 years, before subsequent rulers returned to the traditional polytheistic religion and the pharaohs associated with Atenism were erased from Egyptian records."
  old_atenism:0 "Yaw Maataw Yátin"
- old_atenism_adj:0 "Old Atenist"
- old_atenism_adherent:0 "Old Atenist"
- old_atenism_adherent_plural:0 "Old Atenists"
+ old_atenism_adj:0 "Yaw Maataw Yátin"
+ old_atenism_adherent:0 "Yaw Maataw Yátin"
+ old_atenism_adherent_plural:0 "Yaw Maataw Yátin"
  celtic_religion:0 "Celtic"
  celtic_religion_adj:0 "Celtic"
  celtic_religion_adherent:0 "Celtic Pagan"
@@ -75,57 +70,57 @@
  celtic_bishop_neuter_plural:0 "druids"
  celtic_faith:0 "Ffydd"
  celtic_faith_adj:0 "Ffydd"
- celtic_faith_adherent:0 "Ffyddist"
- celtic_faith_adherent_plural:0 "Ffyddists"
+ celtic_faith_adherent:0 "Ffydd"
+ celtic_faith_adherent_plural:0 "Ffydd"
  celtic_faith_desc:0 "Ffydd covers various Celtic polytheistic religions. Druids played an important part in the Celtic religion performing practices such as animal sacrifice."
  old_celtic_faith:0 "Hen Ffydd"
  old_celtic_faith_adj:0 "Hen Ffydd"
- old_celtic_faith_adherent:0 "Hen Ffyddist"
- old_celtic_faith_adherent_plural:0 "Hen Ffyddists"
+ old_celtic_faith_adherent:0 "Hen Ffydd"
+ old_celtic_faith_adherent_plural:0 "Hen Ffydd"
  canaanism:0 "Emunah Kana'anim"
- canaanism_adj:0 "Canaanite"
- canaanism_adherent:0 "Canaanite"
- canaanism_adherent_plural:0 "Canaanites"
+ canaanism_adj:0 "Emunah Kana'anim"
+ canaanism_adherent:0 "Emunah Kana'anim"
+ canaanism_adherent_plural:0 "Emunah Kana'anim"
  canaanism_desc:0 "Canaanite polytheism refers to the Ancient Semitic religions practiced in the Levant from at least the early Bronze Age through the first centuries of the common era. Notably, it was the religion practiced by the ancient Phoenicians who then disseminated it throughout their coastal colonies. Native Carthaginian religion is thus included within the broader heading of Canaanism. Central deities included El, the most high; El's consort, Asherah; Ba'al Hadad, a storm god and the central cultic focus of later Canaanite thought; and Tanit, a lunar goddess and the patron of Carthage."
  old_canaanism:0 "Masoret Kənáʿanim"
  old_canaanism_adj:0 "Old Canaanite"
  old_canaanism_adherent:0 "Old Canaanite"
  old_canaanism_adherent_plural:0 "Old Canaanites"
  ashurism:0 "Emunah Ashurim"
- ashurism_adj:0 "Ashurite"
- ashurism_adherent:0 "Ashurite"
- ashurism_adherent_plural:0 "Ashurites"
+ ashurism_adj:0 "Emunah Ashurim"
+ ashurism_adherent:0 "Emunah Ashurim"
+ ashurism_adherent_plural:0 "Emunah Ashurim"
  ashurism_desc:0 "Ashurism is the religion of the Assyrian people. The religion had a myriad of Gods, but it was the God Ashur that was the ultimate worship. All the other Gods were seen as aspects of the Chief God Ashur."
  old_ashurism:0 "Masoret Ashurim"
- old_ashurism_adj:0 "Old Ashurite"
- old_ashurism_adherent:0 "Old Ashurite"
- old_ashurism_adherent_plural:0 "Old Ashurites"
+ old_ashurism_adj:0 "Masoret Ashurim"
+ old_ashurism_adherent:0 "Masoret Ashurim"
+ old_ashurism_adherent_plural:0 "Masoret Ashurim"
  south_arabian:0 "Al-Asnam"
- south_arabian_adj:0 "Arabian"
- south_arabian_adherent:0 "Arabian"
- south_arabian_adherent_plural:0 "Arabians"
+ south_arabian_adj:0 "Al-Asnam"
+ south_arabian_adherent:0 "Al-Asnam"
+ south_arabian_adherent_plural:0 "Al-Asnam"
  south_arabian_desc:0 "The South Arabian religion covers the polytheistic religions practised by Arabs before Islam. The religion was highly influenced by Mesopotamian polytheism with celestial objects being worshipped as gods. The moon and the morning star were the chief deities."
  old_south_arabian:0 "Al-Asnam Qadim"
- old_south_arabian_adj:0 "Old Arabian"
- old_south_arabian_adherent:0 "Old Arabian"
- old_south_arabian_adherent_plural:0 "Old Arabians"
+ old_south_arabian_adj:0 "Al-Asnam Qadim"
+ old_south_arabian_adherent:0 "Al-Asnam Qadim"
+ old_south_arabian_adherent_plural:0 "Al-Asnam Qadim"
  romancult:0 "Religio Romana"
- romancult_adj:0 "Roman"
- romancult_adherent:0 "Roman"
- romancult_adherent_plural:0 "Roman"
+ romancult_adj:0 "Religio Romana"
+ romancult_adherent:0 "Romanus"
+ romancult_adherent_plural:0 "Romani"
  old_romancult:0 "Religio Romana Archaica"
- old_romancult_adj:0 "Old Roman"
- old_romancult_adherent:0 "Old Roman"
+ old_romancult_adj:0 "Romanus Archaicus"
+ old_romancult_adherent:0 "Romani Archaici"
  old_romancult_adherent_plural:0 "Old Roman"
  romancult_desc:0 "The Imperial cult of ancient Rome identified emperors and some members of their families with the divinely sanctioned authority of the Roman State. The framework for the Imperial cult was formulated during the early Principate of Augustus, and was rapidly established throughout the Empire and its provinces, with marked local variations in its reception and expression. As Roman society evolved, so did cult to emperors - both proved remarkably resilient and adaptable. Until its confrontation by fully developed Christian orthodoxy, Imperial cult needed no systematic or coherent theology. Its part in Rome's continued success was probably sufficient to justify, sanctify and explain it to most Romans."
  numenism:0 "Disciplina Etrusca"
- numenism_adj:0 "Etruscan"
- numenism_adherent:0 "Etruscan"
- numenism_adherent_plural:0 "Etruscans"
+ numenism_adj:0 "Disciplina Etrusca"
+ numenism_adherent:0 "Etruscus"
+ numenism_adherent_plural:0 "Etruscui"
  old_numenism:0 "Disciplina Etrusca Archaica"
- old_numenism_adj:0 "Old Etruscan"
- old_numenism_adherent:0 "Old Etruscan"
- old_numenism_adherent_plural:0 "Old Etruscans"
+ old_numenism_adj:0 "Disciplina Etrusca Archaica"
+ old_numenism_adherent:0 "Etruscus Archaicus"
+ old_numenism_adherent_plural:0 "Etrusci Archaici"
  numenism_desc:0 "It is difficult to reconstruct early Roman religion which consisted of a mixture of native Latin, Etruscan, and Greek belief. Much of Etruscan religion and mythology became part of classical Roman culture, including the Roman pantheon. The Senate adopted key elements of their religion, which were perpetuated by haruspices (divination specialists) and noble Roman families who claimed Etruscan descent. Greek religion also impacted the Italian peninsula relatively early, adopted into the Etruscan system around 750 BC."
  sol_invctus_name:0 "Sol Invictus"
  sol_invctus_name_possessive:0 "Sol Invictus'"
