--- a/localization/english/religion/religion_protestant_l_english.yml
+++ b/localization/english/religion/religion_protestant_l_english.yml
@@ -9,43 +9,43 @@
  slavic_christian_adherent:0 "Pravoslav"
  slavic_christian_adherent_plural:0 "Pravoslaveni"
  slavic_christian_desc:0 "The word 'pravoslavije' means 'true faith' in the Slavic languages, analogous to the Greek 'orthódoxos' - which is exactly what the Slavic Orthodox Church is: a localized offshoot of the Greek Orthodox Church with more Slavic characteristic, including more syncretism towards Slavic folk traditions."
- lutheran:0 "Evangelical"
- lutheran_adj:0 "Evangelical"
- lutheran_adherent:0 "Evangelical"
- lutheran_adherent_plural:0 "Evangelicals"
+ lutheran:0 "Evangelische"
+ lutheran_adj:0 "Evangelische"
+ lutheran_adherent:0 "Evangelische"
+ lutheran_adherent_plural:0 "Evangelischer"
  lutheran_desc:0 "Evangelicals believe, that salvation is gained through divine grace and faith only, that their faith ought to be based on the scripture alone, and that there are only three sacraments: baptism, eucharist and confession. They reject the authority of the Pope and reject 'good works' being a requirement for salvation, but they otherwise mostly adhere to Catholic traditions."
- calvinist:0 "Reformed"
- calvinist_adj:0 "Reformed"
- calvinist_adherent:0 "Reformist"
- calvinist_adherent_plural:0 "Reformists"
+ calvinist:0 "Hervormd"
+ calvinist_adj:0 "Hervormd"
+ calvinist_adherent:0 "Hervormd"
+ calvinist_adherent_plural:0 "Hervormd"
  calvinist_desc:0 "Reformed Christians are more radical than their Evangelical cousins - in addition to the belief that salvation is through faith and grace only, and that the scripture is the one and only valid source of doctrine, they are also very much iconoclastic, and believe in Predestination: the idea, that everyone's faith is decided the moment they are born, and thus also whether they'll gain salvation or not."
- hussite:0 "Calixtinism"
+ hussite:0 "Calixtinismus"
  hussite_adj:0 "Calixtinist"
- hussite_adherent:0 "Calixtinist"
- hussite_adherent_plural:0 "Calixtinists"
+ hussite_adherent:0 "Calixtinistus"
+ hussite_adherent_plural:0 "Calixtinisti"
  hussite_desc:0 "Calixtinism is the belief, that that communion under both kinds (both bread and wine, as opposed to the bread alone) should be administered to the laity during the celebration of the Eucharist. They also reject papal authority, and believe that the scripture is the only valid source of church dogma."
  quaker:0 "Quakerism"
  quaker_adj:0 "Quaker"
  quaker_adherent:0 "Quaker"
  quaker_adherent_plural:0 "Quakers"
  quaker_desc:0 "Quakers' theological beliefs vary considerably. Tolerance of dissent widely varies among yearly meetings. Most Quakers - also called 'Friends' - believe in continuing revelation: that God continuously reveals truth directly to individuals. Friends often focus on trying to hear God, they also reject the idea of priests, believing in the priesthood of all believers."
- arian:0 "Arianism"
- arian_adj:0 "Arian"
- arian_adherent:0 "Arian"
- arian_adherent_plural:0 "Arians"
+ arian:0 "Arianismus"
+ arian_adj:0 "Arianistus"
+ arian_adherent:0 "Arianistus"
+ arian_adherent_plural:0 "Arianisti"
  arian_desc:0 "Arianism is a Christological doctrine first attributed to Arius (c. AD 256–336), a Christian presbyter in Alexandria, Egypt. Arian theology holds that the Son of God is not co-eternal with God the Father and is distinct from the Father (therefore subordinate to him). Despite their rejection of the Trinity, Arianism still holds that Jesus Christ is the Son of God, who was begotten by God the Father."
- pelagian:0 "Pelagianism"
- pelagian_adj:0 "Pelagian"
- pelagian_adherent:0 "Pelagian"
- pelagian_adherent_plural:0 "Pelagians"
+ pelagian:0 "Pelagianismismus"
+ pelagian_adj:0 "Pelagianistus"
+ pelagian_adherent:0 "Pelagianistus"
+ pelagian_adherent_plural:0 "Pelagianisti"
  pelagian_desc:0 "Pelagianism is a heterodox Christian theological position that holds that the original sin did not taint human nature and that humans have the free will to achieve human perfection without divine grace. Pelagius (c. 355 – c. 420 AD), a British ascetic and philosopher, taught that God could not command believers to do the impossible, and therefore it must be possible to satisfy all divine commandments. He also taught that it was unjust to punish one person for the sins of another; therefore, infants are born blameless. Pelagius accepted no excuse for sinful behavior and taught that all Christians, regardless of their station in life, should live unimpeachable, sinless lives."
- ebionite:0 "Ebionitism"
- ebionite_adj:0 "Ebionite"
- ebionite_adherent:0 "Ebionite"
- ebionite_adherent_plural:0 "Ebionites"
+ ebionite:0 "Ebyoni"
+ ebionite_adj:0 "Ebyoni"
+ ebionite_adherent:0 "Ebyoni"
+ ebionite_adherent_plural:0 "Ebyonim"
  ebionite_desc:0 "The Ebionites were a sect of Jewish Christians, who were vegetarians, viewed poverty as holy, believed in ritual ablutions, and rejected animal sacrifices. The Ebionites held several heterodox beliefs that set them apart from other Christians, namely rejecting the virgin birth of Christ, maintaining that Jesus was the natural son of Joseph and Mary who became the Messiah because he obeyed the Jewish law.\nAccordingly, the Ebionites insisted on the necessity of following the Written Law of Moses alone (without the Oral Law); used one, some or all of the Jewish–Christian gospels, such as the Gospel of the Ebionites, as additional scripture to the Hebrew Bible; and revered James the Just as an exemplar of righteousness and the true successor to Jesus (rather than Peter), while rejecting Paul as a false apostle and an apostate from the Law."
- donatism:0 "Donatism"
- donatism_adj:0 "Donatist"
- donatism_adherent:0 "Donatist"
- donatism_adherent_plural:0 "Donatists"
+ donatism:0 "Donatismus"
+ donatism_adj:0 "Donatistus"
+ donatism_adherent:0 "Donatisti"
+ donatism_adherent_plural:0 "Donatistus"
  donatism_desc:0 "Donatism is a Gnostic Christian sect characterized by their belief that Christian clergy must be faultless for their ministry to be effective and their prayers and sacraments to be valid."
