Preparing to add uniquely Hungarian traditions too.

--- a/localization/english/culture/traditions/eastern_traditions_l_english.yml
+++ b/localization/english/culture/traditions/eastern_traditions_l_english.yml
@@ -3,7 +3,7 @@
  tradition_bushido_name:0 "Bushidō"
  tradition_bushido_desc:1 "Bushidō - Japanese for \"Way of the Warrior\" - was the set of codes of honour and ideals originating in Confucian, Zen Buddhist and Shinto teachings, that dictated the samurai way of life, loosely analogous to the European concept of chivalry."
  culture_parameter_unlock_maa_samurai:0 "Can recruit [GetMaA('samurai').GetName] as [men_at_arms|E]"
- culture_parameter_unlock_maa_cossack:0 "Can recruit [GetMaA('cossack').GetName] as [men_at_arms|E]"
+ culture_parameter_unlock_maa_cossack:0 "Can recruit [GetMaA('cossack').GetName] as [men_at_arms|E] and is more effective at promoting culture in Steppe provinces"
  culture_parameter_allows_veche_election:0 "Can enact the #high $tradition_veche_name$#! [succession_law|E]"
  tradition_sauna_name:0 "Sauna"
  tradition_sauna_desc:1 "It is of high importance to cleanse our bodies of all the intoxicants in steaming heat, so that we may rejoin the world cleansed."
@@ -20,9 +20,14 @@
  culture_parameter_minus_language_cap:0 "Can learn #N 1#! less [language|E] without any penalties"
  culture_parameter_easier_conversion_of_other_cultures:0 "Easier to convert other cultures, while being harder to convert"
  culture_in_steppe_terrain_10_desc:0 "At least #V 10%#! of the [counties|E] of this [culture|E] must be in Steppe [terrain|E] or the [GetGeographicalRegion('world_steppe').GetName] [region|E]"
+ culture_in_hungary_33_desc:0 "At least #V 33%#! of the [counties|E] of this [culture|E] must be in the [GetGeographicalRegion('custom_hungary').GetName] [region|E]"
  culture_parameter_bad_congenital_traits_shunned:0 "Negative congenital traits are Shunned"
  culture_parameter_good_congenital_traits_exalted:0 "Positive congenital traits are Exalted"
  culture_parameter_allows_unrestricted_marriage:0 "Allows unrestricted marriage"
+ culture_parameter_holding_fort_level_in_hungary_bonus:0 "Castles provide more defense in [GetGeographicalRegion('custom_hungary').GetName] [region|E] and [rulers|E] of this [culture|E] gain [piety_i][piety|E] from [castle|E] [holdings|E]"
+ culture_parameter_lazy_trait_more_common:0 "[characters|E] gain [GetTrait('lazy').GetName( GetNullCharacter )] [traits|E] more often"
+ culture_parameter_depressed_trait_more_common:0 "[characters|E] gain [GetTrait('depressed_genetic').GetName( GetNullCharacter )] [traits|E] more often, but some of the negative effects of the trait are mitigated"
+ culture_parameter_hungarian_revanchism_active:0 "Lower opinion of foreign-cultured overlords, populist uprisings are slightly more common"
  russian_or_polish_desc:0 "The [culture|E] does not have the Russian or Polish [heritage|E]"
  russian_mongolic_chinese_japanese_korean_desc:0 "The [culture|E] does not have the East Slavic, Mongolic, Chinese, Japanese or Korean [heritage|E]"
  tradition_cultural_supremacism_name:0 "Cultural Supremacism"
@@ -31,6 +36,8 @@
  tradition_cultural_supremacism_desc:1 "This culture openly and publicly claims superiority over all other cultures and views the assimilation of 'inferior' peoples into this culture as a necessary part of a mission to civilize the barbarians. There is nothing to be learned from or about foreign barbarians - their inferior cultures must be replaced by our superior one."
  tradition_tamers_of_the_steppe_name:0 "Tamers of the Steppe"
  tradition_tamers_of_the_steppe_desc:1 "This culture does not originate from the steppes, but it has spread its seeds there, trying to tame the wast wilderness of the steppes."
+ tradition_birch_bark_name:0 "Birch Bark Manuscripts"
+ tradition_birch_bark_desc:0 "Birch bark manuscripts are documents written on pieces of the inner layer of birch bark, which was commonly used for writing before the advent of mass production of paper. Evidence of birch bark for writing goes back many centuries and in various cultures."
  tradition_alabama_name:0 "Sweet Home"
  tradition_alabama_desc:1 "This culture believes in keeping it in the family, in the warmth of the sweet home."
  tradition_sexual_revolution_name:0 "The Summer of Love"
@@ -59,3 +66,21 @@
  TRADITION_HARDER_TO_CULTURE_CONVERT_WITHOUT_TRADITION_MODIFIER:1 "Liege [cultural|E] [tradition|E] penalty"
  CULTURE_CONVERSION_SUPREMACY_COUNTY_MODIFIER:0 "[county.GetCulture.GetName] — [GetCultureTradition('tradition_cultural_supremacism').GetBaseName]"
  CULTURE_CONVERSION_SUPREMACY_LIEGE_MODIFIER:0 "[liege.GetCulture.GetName] — [GetCultureTradition('tradition_cultural_supremacism').GetBaseName]"
+ CULTURE_CONVERSION_COSSACKS_LIEGE_MODIFIER:0 "[liege.GetCulture.GetName] — [GetCultureTradition('tradition_tamers_of_the_steppe').GetBaseName]"
+ veche_elective_succession_law:0 "$tradition_veche_name$"
+ veche_elective_succession_law_effects:1 "The [ruler|E] and all [vassals|E] above the [rank|E] of [baron|E] can nominate a [title_heir|E] from among the the ruler's de-jure vassals or members of the ruler's [dynasty|E]."
+ veche_elective_candidates_tooltip:1 "All de-jure vassals of the current ruler, as well as legitimate members of the current ruler's [dynasty|E] who are not in line to inherit a Theocracy or Republic are valid candidates under the $tradition_veche_name$. Children of a candidate cannot be nominated."
+ veche_elective_electors:0 "$feudal_elective_electors$"
+ veche_elective_electors_tooltip:0 "In order to be a valid [elector|E] under $tradition_veche_name$, a vassal must fulfill all the following conditions:\n$EFFECT_LIST_BULLET$Be a [de_jure|E] vassal of the title\n$EFFECT_LIST_BULLET$Be only one or two [ranks|E] below the title"
+ succession_laws_must_have_valid_veche_culture:1 "Your culture does #bold not#! have the[GetCultureTradition('tradition_veche').GetBaseName] [tradition|E]."
+ 
+ # Hungarian traditions
+ 
+ tradition_carpathian_fortress_name:0 "Carpathian Fortress"
+ tradition_carpathian_fortress_desc:1 "The Carpathian Basin is our mighty fortress. Within its boundaries, we are safe from all foreign incursions."
+ tradition_pato_pal_name:0 "Compulsive Procrastination"
+ tradition_pato_pal_desc:1 "This culture is known for having a particularly laid-back attitude towards duties and outstanding tasks - if I can do it tomorrow, why should I do it today?"
+ tradition_hungarian_pessimism_name:0 "Gloomy Sunday"
+ tradition_hungarian_pessimism_desc:1 "#italic \"Gloomy is Sunday,\nMy hours are slumberless\nDearest the shadows\nI live with are numberless\nLittle white flowers\nWill never awaken you\nNot where the black coach of\nSorrow has taken you\nAngels have no thought\nOf ever returning you,\nWould they be angry\nIf I thought of joining you?\n\nGloomy Sunday\n\nGloomy is Sunday,\nWith shadows I spend it all\nMy heart and I\nHave decided to end it all\nSoon there'll be candles\nAnd prayers that are sad I know\nLet them not weep\nLet them know that I'm glad to go\nDeath is no dream\nFor in death I'm caressing you\nWith the last breath of my soul\nI'll be blessing you\n\nGloomy Sunday...\"#!"
+ tradition_hungarian_revanchism_name:0 "Sanguine Revanchism"
+ tradition_hungarian_revanchism_desc:1 "This culture is known for having low tolerance for foreign overlords and tyrannical robber-barons, with a nobility always eager to conspire against foreign courtiers and a peasantry always on the verge of rioting to run the local judge out of town."
