--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -376,10 +376,10 @@
  ari_adherent:0 "Ari"
  ari_adherent_plural:0 "Aris"
  ari_adj:0 "Ari"
- armenian_apostolic:1 "Aṙak'elakan"
- armenian_apostolic_adherent:1 "Aṙak'elakan"
- armenian_apostolic_adherent_plural:1 "Aṙak'elakan"
- armenian_apostolic_adj:1 "Aṙak'elakan"
+ armenian_apostolic:1 "Arak'elakan"
+ armenian_apostolic_adherent:1 "Arak'elakan"
+ armenian_apostolic_adherent_plural:1 "Arak'elakan"
+ armenian_apostolic_adj:1 "Arak'elakan"
  ashari:0 "Ash'arī"
  ashari_adherent:0 "Ash'arī"
  ashari_adherent_plural:0 "Ash'arīyah"
@@ -458,10 +458,10 @@
  ghulat_adherent:1 "Ghālī"
  ghulat_adherent_plural:1 "Ghulāh"
  ghulat_adj:1 "Ghālī"
- hafizi:0 "Ḥāfiẓi"
- hafizi_adherent:0 "Ḥāfiẓi"
- hafizi_adherent_plural:0 "Ḥāfiẓiyya"
- hafizi_adj:0 "Ḥāfiẓi"
+ hafizi:0 "Hāfizi"
+ hafizi_adherent:0 "Hāfizi"
+ hafizi_adherent_plural:0 "Hāfiziyya"
+ hafizi_adj:0 "Hāfizi"
  hellenic_pagan:0 "Ellinismós"
  hellenic_pagan_adherent:0 "Ellinistís"
  hellenic_pagan_adherent_plural:0 "Ellinistés"
@@ -470,10 +470,10 @@
  hellenic_pagan_old_adherent:0 "Palaiós Ellinistís"
  hellenic_pagan_old_adherent_plural:0 "Palaioí Ellinistés"
  hellenic_pagan_old_adj:0 "Palaioellinikó"
- ibadi:0 "Ibāḍi"
- ibadi_adherent:0 "Ibāḍi"
- ibadi_adherent_plural:0 "Ibāḍiyyah"
- ibadi_adj:0 "Ibāḍi"
+ ibadi:0 "Ibādi"
+ ibadi_adherent:0 "Ibādi"
+ ibadi_adherent_plural:0 "Ibādiyyah"
+ ibadi_adj:0 "Ibādi"
  iconoclast:0 "Eikonoklást"
  iconoclast_adherent:0 "Eikonoklástos"
  iconoclast_adherent_plural:0 "Eikonoklástai"
@@ -486,10 +486,10 @@
  insular_celtic_adherent:0 "Críostúlacht"
  insular_celtic_adherent_plural:0 "Críostúlacht"
  insular_celtic_adj:0 "Críostúlacht"
- ismaili:0 "'Ismāʿīlī"
- ismaili_adherent:0 "'Ismāʿīlī"
- ismaili_adherent_plural:0 "Ismāʿīlīyah"
- ismaili_adj:0 "Ismāʿīlī"
+ ismaili:0 "'Ismā'īlī"
+ ismaili_adherent:0 "'Ismā'īlī"
+ ismaili_adherent_plural:0 "Ismā'īlīyah"
+ ismaili_adj:0 "Ismā'īlī"
  kabarism:1 "Qusarī"
  kabarism_adherent:1 "Qusarī"
  kabarism_adherent_plural:1 "Qusarī"
@@ -506,10 +506,10 @@
  khurmazta_adherent:0 "Khormāzard"
  khurmazta_adherent_plural:0 "Khormāzard"
  khurmazta_adj:0 "Khormāzard"
- khurramism:0 "Muḥammira"
- khurramism_adherent:0 "Muḥammira"
- khurramism_adherent_plural:0 "Muḥammira"
- khurramism_adj:0 "Muḥammira"
+ khurramism:0 "Muhammira"
+ khurramism_adherent:0 "Muhammira"
+ khurramism_adherent_plural:0 "Muhammira"
+ khurramism_adj:0 "Muhammira"
  kiratism:0 "Kirati"
  kiratism_adherent:0 "Kirati"
  kiratism_adherent_plural:0 "Kirati"
@@ -558,10 +558,10 @@
  manichean_adherent:0 "Āyīn-e Mānī"
  manichean_adherent_plural:0 "Āyīn-e Mānī"
  manichean_adj:0 "Āyīn-e Mānī"
- masmudi:1 "Muwaḥḥidūn"
- masmudi_adherent:1 "Muwaḥḥidūn"
- masmudi_adherent_plural:1 "Muwaḥḥidūn"
- masmudi_adj:1 "Muwaḥḥidūn"
+ masmudi:1 "Muwahhidūn"
+ masmudi_adherent:1 "Muwahhidūn"
+ masmudi_adherent_plural:1 "Muwahhidūn"
+ masmudi_adj:1 "Muwahhidūn"
  maturidi:0 "Māturīdi"
  maturidi_adherent:0 "Māturīdi"
  maturidi_adherent_plural:0 "Māturīdiyyah"
@@ -573,23 +573,24 @@
  mazdayasna_adherent:0 "Mazdayasna"
  mazdayasna_adherent_plural:0 "Mazdayasna"
  mazdayasna_adj:0 "Mazdayasna"
- melieism:0 "Mjïnja̱"
- melieism_adherent:0 "Mjïnja̱"
- melieism_adherent_plural:0 "Mjïnja̱"
- melieism_adj:0 "Mjïnja̱"
- melieism_old:0 "Lao Mjïnja̱"
- melieism_old_adherent:0 "Lao Mjïnja̱"
- melieism_old_adherent_plural:0 "Lao Mjïnja̱"
- melieism_old_adj:0 "Lao Mjïnja̱"
+ melieism:0 "Mjïnja"
+ melieism_adherent:0 "Mjïnja"
+ melieism_adherent_plural:0 "Mjïnja"
+ melieism_adj:0 "Mjïnja"
+ melieism_old:0 "Lao Mjïnja"
+ melieism_old_adherent:0 "Lao Mjïnja"
+ melieism_old_adherent_plural:0 "Lao Mjïnja"
+ melieism_old_adj:0 "Lao Mjïnja"
  meshefares_adherent:0 "Meshefaresist"
  meshefares_adherent_plural:0 "Meshefaresists"
  meshefares_adj:0 "Meshefaresist"
  meshefaresism_adherent:0 "$meshefares_adherent$"
  meshefaresism_adherent_plural:0 "$meshefares_adherent_plural$"
  meshefaresism_adj:0 "$meshefares_adj$"
- messalian_adherent:1 "Messalian"
- messalian_adherent_plural:0 "Messalians"
- messalian_adj:0 "Messalian"
+ messalian:1 "Msallyānā"
+ messalian_adherent:1 "Msallyānā"
+ messalian_adherent_plural:0 "Msallyānā"
+ messalian_adj:0 "Msallyānā"
  mozarabic_church:0 "Visigodo"
  mozarabic_church_adherent:0 "Visigodo"
  mozarabic_church_adherent_plural:0 "Visigodos"
@@ -609,10 +610,10 @@
  najdat_adherent:0 "Najdatī"
  najdat_adherent_plural:0 "Najdatī"
  najdat_adj:0 "Najdatī"
- nestorian:0 "Nusṭūr"
- nestorian_adherent:0 "Nusṭūr"
- nestorian_adherent_plural:0 "Nusṭūrīyyah"
- nestorian_adj:0 "Nusṭūr"
+ nestorian:0 "Nustūr"
+ nestorian_adherent:0 "Nustūr"
+ nestorian_adherent_plural:0 "Nustūrīyyah"
+ nestorian_adj:0 "Nustūr"
  nizari:0 "Nizāri"
  nizari_adherent:0 "Nizāri"
  nizari_adherent_plural:0 "Nizāriyyūn"
@@ -654,14 +655,14 @@
  priscillianism_adherent:0 "Priskillianistós"
  priscillianism_adherent_plural:0 "Priskillianistói"
  priscillianism_adj:0 "Priskillianistós"
- qarmatian:0 "Qarāmiṭa"
- qarmatian_adherent:0 "Qarāmiṭa"
- qarmatian_adherent_plural:0 "Qarmāṭiyān"
- qarmatian_adj:0 "Qarāmiṭa"
+ qarmatian:0 "Qarāmita"
+ qarmatian_adherent:0 "Qarāmita"
+ qarmatian_adherent_plural:0 "Qarmātiyān"
+ qarmatian_adj:0 "Qarāmita"
  quanzhen_adherent:0 "Quanzhen"
  quanzhen_adherent_plural:0 "Quanzhen"
  quanzhen_adj:0 "Quanzhen"
- quranist:0 "Qurʾāni"
+ quranist:0 "Qur'āni"
  quranist_adherent:0 "Qur'āni"
  quranist_adherent_plural:0 "Qur'āniyya"
  quranist_adj:0 "Qur'āni"
@@ -669,21 +670,26 @@
  rabbinism_adherent:0 "Rabanit"
  rabbinism_adherent_plural:0 "Rabanit"
  rabbinism_adj:0 "Rabanit"
+ rrmeaism:0 "Vvluphimi"
  rrmeaism_adherent:0 "Vvluphimi"
  rrmeaism_adherent_plural:0 "Vvluphim"
  rrmeaism_adj:0 "Vvluphixje"
- rrmeaism:0 "Lao Vvluphimi"
+ rrmeaism_old:0 "Lao Vvluphimi"
  rrmeaism_old_adherent:0 "Lao Vvluphimi"
  rrmeaism_old_adherent_plural:0 "Lao Vvluphim"
  rrmeaism_old_adj:0 "Lao Vvluphixje"
- sabianism:0 "Ṣābi"
- sabianism_adherent:0 "Ṣābi"
- sabianism_adherent_plural:0 "Ṣābi'ūn"
- sabianism_adj:0 "Ṣābi"
+ sabianism:0 "Sābi"
+ sabianism_adherent:0 "Sābi"
+ sabianism_adherent_plural:0 "Sābi'ūn"
+ sabianism_adj:0 "Sābi"
  samaritan:0 "Shā̊merī"
  samaritan_adherent:0 "Shā̊merī"
  samaritan_adherent_plural:0 "Shā̊merīm"
  samaritan_adj:0 "Shā̊merī"
+ sedism:0 "Sedi Ome"
+ sedism_adherent:0 "Sedi Ome"
+ sedism_adherent_plural:0 "Sedi Ome"
+ sedism_adj:0 "Sedi Ome"
  sedism_old:0 "Lao Sedi Ome"
  sedism_old_adherent:0 "Lao Sedi Ome"
  sedism_old_adherent_plural:0 "Lao Sedi Ome"
@@ -725,10 +731,10 @@
  srikula_shaktism_adherent:0 "Srikula Śākta"
  srikula_shaktism_adherent_plural:0 "Srikula Śākta"
  srikula_shaktism_adj:0 "Srikula Śākta"
- sufri:0 "Ṣufri"
- sufri_adherent:0 "Ṣufri"
- sufri_adherent_plural:0 "Ṣufriyya"
- sufri_adj:0 "Ṣufri"
+ sufri:0 "Sufri"
+ sufri_adherent:0 "Sufri"
+ sufri_adherent_plural:0 "Sufriyya"
+ sufri_adj:0 "Sufri"
  svetambara_adherent:0 "Svetambara"
  svetambara_adherent_plural:0 "Svetambara"
  svetambara_adj:0 "Svetambara"
@@ -748,10 +754,10 @@
  urartuism_adherent:1 "Arewordi"
  urartuism_adherent_plural:1 "Arewordi"
  urartuism_adj:1 "Arewordi"
- vaishnavism:0 "Vaiṣṇavasampradāyaḥ"
- vaishnavism_adherent:0 "Vaiṣṇavasampradāyaḥ"
- vaishnavism_adherent_plural:0 "Vaiṣṇavasampradāyaḥ"
- vaishnavism_adj:1 "Vaiṣṇavasampradāyaḥ"
+ vaishnavism:0 "Vaisṇavasampradāyaḥ"
+ vaishnavism_adherent:0 "Vaisṇavasampradāyaḥ"
+ vaishnavism_adherent_plural:0 "Vaisṇavasampradāyaḥ"
+ vaishnavism_adj:1 "Vaisṇavasampradāyaḥ"
  vajrayana:0 "Vajrayāna"
  vajrayana_adherent:0 "Vajrayāna"
  vajrayana_adherent_plural:0 "Vajrayāna"
